# mantrachain

./: .dockerignore  .gitignore  .golangci.yml  .goreleaser.yaml  .lycheeignore  CHANGELOG.md  CODEOWNERS  COSMWASM.md  Dockerfile  GUARD.md  Makefile  Makefile.prod  PARAMS.md  README.md  SECURITY.md  TOKEN_FLOW.md  TUTORIAL.md  buf.gen.proto.yaml  chains.yaml  cliff.toml  coderabbit.yaml  config-test.yml  config.yml  default.nix  diddoc.json  flake.nix  go.mod  go.sum  gomod2nix.toml  pytest.ini  readme.md  sonar-project.properties
.devcontainer/: devcontainer.json
.github/: dependabot.yml  labeler.yml  mergify.yml
adr/: PROCESS.md  README.md  adr-001-adr-creation.md  adr-002-guard-checks-at-msg-level.md  adr-002-use-official-cosmos-modules.md  adr-003-use-neutron-tokenfactory.md  adr-003-use-official-cosmos-modules.md  adr-004-create-permissionless-coins.md  adr-004-use-depinject-when-possible.md  adr-005-default-permissionless-coins.md  adr-005-maintain-sdk-fork.md  adr-006-allow-unprotected-tx.md  adr-006-standardise-coinfactory.md  adr-007-kvstore-key-prefix.md  adr-008-use-neutron-tokenfactory.md  adr-009-use-depinject-when-possible.md  adr-template.md
app/: ante.go  ante_handler.go  app.go  app_config.go  bank.go  config.go  (+31 more)
integration_tests/: conftest.py  cosmoscli.py  network.py  pyproject.toml  shell.nix  test_basic.py  test_flow.py  utils.py
integration_tests/configs/: default.jsonnet
integration_tests/contracts/: package-lock.json  package.json
integration_tests/contracts/contracts/: Greeter.sol  TestERC20A.sol  TestMessageCall.sol  TestRevert.sol
(+2136 files in other folders)
