[tool.poetry]
name = "integration-tests"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pytest = "^8.3.4"
pystarport = { git = "https://github.com/crypto-com/pystarport.git", branch = "main" }
pytest-github-actions-annotate-failures = "^0.3.0"
flake8-black = "^0.3.6"
flake8-isort = "^6.1.2"
pyunormalize = "^16.0.0"
cprotobuf = { git = "https://github.com/yihuang/cprotobuf.git", branch = "master" }


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
